<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rdgdevlopment.gutierrezroberto_ce02.MainActivity"
    android:padding="8dp">

    <EditText
        android:id="@+id/entry1"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numerC1"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/entry2"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/entry2"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numberC2"
        android:inputType= "number"
        android:maxLength="1"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/entry1"
        app:layout_constraintLeft_toRightOf="@+id/entry1"
        app:layout_constraintRight_toLeftOf="@+id/entry3"/>

    <EditText
        android:id="@+id/entry3"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numberC3"
        android:inputType="number"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/entry1"
        app:layout_constraintLeft_toRightOf="@+id/entry2"
        app:layout_constraintRight_toLeftOf="@+id/entry4"/>

    <EditText
        android:id="@+id/entry4"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numberC4"
        android:inputType="number"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/entry1"
        app:layout_constraintLeft_toRightOf="@+id/entry3"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/button_submit"
        android:text="@string/buttonTitle"
        android:textSize="28sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry3"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>


</android.support.constraint.ConstraintLayout>
